--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,15 +1,16 @@
 .grid {
-    display: flex;
-    gap: 24px;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .links {
-    text-align: center;
-    flex-grow: 1;
+  text-align: center;
+  flex-grow: 1;
+  margin-top: 24px;
 }
 
 .links a {
-    margin: 0 8px;
+  margin: 0 8px;
 }
